fixed some image alignment

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ a:active {
 } */
 
 .scoring-img {
-  max-width: 95%;
+  max-width: 100%;
   border-radius: 5px;
   margin-top: 25px;
 }
@@ -142,9 +142,10 @@ a:active {
 }
 
 .belts-img {
-  max-width: 95%;
+  max-width: 100%;
   border-radius: 5px;
   margin-top: 30px;
+  padding-bottom: 20px;
 }
 
 .list-item {
